--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Buscador</title>
     <meta name="description" content="Proyecto el cual es un buscador de Autos, desarrollado en HTML, CSS y Vanilla JS.">
     <link rel="stylesheet" href="css/normalize.css">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@100;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Buscador de Autos</h1>
-
+  
     <div class="container">
 
         <form id="search">
