buscador marca y año

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </form>
 
         <h2>Resultados</h2>
-        <div id="resultado"></div>
+        <div id="resultado" class="resultado"></div>
 
     </div> <!--Fin del contenedor-->
     <script src="js/index.js" type="module"></script>
