--- a/index.html
+++ b/index.html
@@ -1,104 +1,116 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Buscador</title>
-    <meta name="description" content="Proyecto el cual es un buscador de Autos, desarrollado en HTML, CSS y Vanilla JS.">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@100;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
+    <meta
+      name="description"
+      content="Proyecto el cual es un buscador de Autos, desarrollado en HTML, CSS y Vanilla JS."
+    />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Archivo:wght@100;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <meta name="theme-color" content="#00BFFF" />
+  </head>
+  <body>
     <h1>Buscador de Autos</h1>
-  
+
     <div class="container">
+      <form id="search">
+        <div class="contenedor-campos">
+          <div class="campo">
+            <label for="marca">Marca</label>
+            <select id="marca">
+              <option value="">Seleccionar</option>
+              <option value="Audi">Audi</option>
+              <option value="BMW">BMW</option>
+              <option value="Mercedes Benz">Mercedes Benz</option>
+              <option value="Chevrolet">Chevrolet</option>
+              <option value="Ford">Ford</option>
+              <option value="Dodge">Dodge</option>
+            </select>
+          </div>
+          <!-- FIN DIV-->
 
-        <form id="search">
+          <div class="campo">
+            <label for="year">Año</label>
+            <select id="year">
+              <option value="">Seleccionar</option>
+            </select>
+          </div>
+          <!-- FIN DIV-->
+          <div class="campo">
+            <label for="min">Precio Min</label>
+            <select id="minimo">
+              <option value="">Seleccionar</option>
+              <option value="20000">20,000</option>
+              <option value="30000">30,000</option>
+              <option value="40000">40,000</option>
+              <option value="50000">50,000</option>
+              <option value="60000">60,000</option>
+              <option value="70000">70,000</option>
+              <option value="80000">80,000</option>
+              <option value="90000">90,000</option>
+            </select>
+          </div>
+          <!--FIN DIV-->
+          <div class="campo">
+            <label for="max">Precio Max</label>
+            <select id="maximo">
+              <option value="">Seleccionar</option>
+              <option value="20000">20,000</option>
+              <option value="30000">30,000</option>
+              <option value="40000">40,000</option>
+              <option value="50000">50,000</option>
+              <option value="60000">60,000</option>
+              <option value="70000">70,000</option>
+              <option value="80000">80,000</option>
+              <option value="90000">90,000</option>
+            </select>
+          </div>
+          <!--FIN DIV-->
+          <div class="campo">
+            <label for="puertas">Puertas</label>
+            <select id="puertas">
+              <option value="">Seleccionar</option>
+              <option value="2">2</option>
+              <option value="4">4</option>
+            </select>
+          </div>
+          <!--FIN DIV-->
+          <div class="campo">
+            <label for="transmision">Transmisión</label>
+            <select id="transmision">
+              <option value="">Seleccionar</option>
+              <option value="automatico">Automática</option>
+              <option value="manual">Manual</option>
+            </select>
+          </div>
+          <!--FIN DIV-->
+          <div class="campo">
+            <label for="color">Color</label>
+            <select id="color">
+              <option value="">Seleccionar</option>
+              <option value="Negro">Negro</option>
+              <option value="Azul">Azul</option>
+              <option value="Blanco">Blanco</option>
+              <option value="Rojo">Rojo</option>
+            </select>
+          </div>
+          <!--FIN DIV-->
+        </div>
+        <!--FIN CONTENEDOR CAMPOS-->
+      </form>
 
-            <div class="contenedor-campos">
-                <div class="campo">
-                    <label for="marca">Marca</label>
-                    <select id="marca">
-                        <option value="">Seleccionar</option>
-                        <option value="Audi">Audi</option>
-                        <option value="BMW">BMW</option>
-                        <option value="Mercedes Benz">Mercedes Benz</option>
-                        <option value="Chevrolet">Chevrolet</option>
-                        <option value="Ford">Ford</option>
-                        <option value="Dodge">Dodge</option>
-                    </select>
-                </div> <!-- FIN DIV-->
-    
-                <div class="campo">
-                    <label for="year">Año</label>
-                    <select id="year">
-                        <option value="">Seleccionar</option>
-                    </select>
-                </div><!-- FIN DIV-->
-                <div class="campo">
-                    <label for="min">Precio Min</label>
-                    <select id="minimo">
-                        <option value="">Seleccionar</option>
-                        <option value="20000">20,000</option>
-                        <option value="30000">30,000</option>
-                        <option value="40000">40,000</option>
-                        <option value="50000">50,000</option>
-                        <option value="60000">60,000</option>
-                        <option value="70000">70,000</option>
-                        <option value="80000">80,000</option>
-                        <option value="90000">90,000</option>
-                    </select>
-                </div> <!--FIN DIV-->
-                <div class="campo">
-                    <label for="max">Precio Max</label>
-                    <select id="maximo">
-                        <option value="">Seleccionar</option>
-                        <option value="20000">20,000</option>
-                        <option value="30000">30,000</option>
-                        <option value="40000">40,000</option>
-                        <option value="50000">50,000</option>
-                        <option value="60000">60,000</option>
-                        <option value="70000">70,000</option>
-                        <option value="80000">80,000</option>
-                        <option value="90000">90,000</option>
-                    </select>
-                </div> <!--FIN DIV-->
-                <div class="campo">
-                    <label for="puertas">Puertas</label>
-                    <select id="puertas">
-                            <option value="">Seleccionar</option>
-                            <option value="2">2</option>
-                            <option value="4">4</option>
-                    </select>
-                </div> <!--FIN DIV-->
-                <div class="campo">
-                    <label for="transmision">Transmisión</label>
-                    <select id="transmision">
-                            <option value="">Seleccionar</option>
-                            <option value="automatico">Automática</option>
-                            <option value="manual">Manual</option>
-                    </select>
-                </div> <!--FIN DIV-->
-                <div class="campo">
-                    <label for="color">Color</label>
-                    <select id="color">
-                            <option value="">Seleccionar</option>
-                            <option value="Negro">Negro</option>
-                            <option value="Azul">Azul</option>
-                            <option value="Blanco">Blanco</option>
-                            <option value="Rojo">Rojo</option>
-                    </select>
-                </div> <!--FIN DIV-->
-            </div> <!--FIN CONTENEDOR CAMPOS-->
-            
-        </form>
-
-        <h2>Resultados</h2>
-        <div id="resultado" class="resultado"></div>
-
-    </div> <!--Fin del contenedor-->
+      <h2>Resultados</h2>
+      <div id="resultado" class="resultado"></div>
+    </div>
+    <!--Fin del contenedor-->
     <script src="js/index.js" type="module"></script>
-</body>
+  </body>
 </html>
